Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
1.8.0
-
None
Description
In case of RF=2 and more than two locations, the logic of the LA rebalancer suggests a fix for the distribution of replicas, and the rebalancer loops indefinitely trying to implement the suggested replica movements.
However, RF=2 is a special case: any replica distribution of a tablet with RF=2 is a violations of the placement policy constraints and it's impossible to fix that, regardless of number of locations in the cluster.